# infi.systray

./: .gitignore  README.md  bootstrap.py  buildout.cfg  pyproject.toml  setup.cfg  setup.in
src/infi/: __init__.py
src/infi/systray/: __init__.py  traybar.py  win32_adapter.py
src/simplesystray/: __init__.py  traybar.py
tests/: test.py
