[project]
name = "simplesystray"
version = "0.0.3"
authors = [
  { name="actorpus", email="alex@actorpus.com" },
]
description = "Adds support for a simple icon on the system tray, clone of infi-systray but maintained"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/actorpus/systrayv2"
"Bug Tracker" = "https://github.com/actorpus/systrayv2/issues"