[metadata]
name = simplesystray
version = 0.0.1
author = actorpus (alex)
author_email = alex@actorpus.com
description = Adds support for a simple icon on the system tray, clone of infi-systray but maintained
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/actorpus/systrayv2
project_urls =
    Bug Tracker = https://github.com/actorpus/systrayv2/issues
classifiers =
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
